commi on 'master'

--- a/catálogo.html
+++ b/catálogo.html
@@ -5,67 +5,77 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Catálogo</title>
+  
+   <!--Style-->
+   <link rel="stylesheet" href="/css/main.css">
+
 </head>
 <body>
 </head>
 <body>
 
   <header>
-    <div>
-      <img src="/image/logo.png" alt="logo principal do site, super hero" />
+    <div class="backgorund-catalog">
+      <img class="logo" alt="logo principal do site, super hero" src="/image/logo.png" />
       <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="catálogo.html">Catálogo</a></li>
-          <li><a href="contato.html">Contato</a></li>
-        </ul>
-      </nav>>
+        <div class="button">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="catálogo.html">Catálogo</a></li>
+            <li><a href="contato.html">Contato</a></li>
+          </ul>
+        </div>
+      </nav>
+      <img class="novidade" src="/image/captainmarveltitle.png" alt="Novidade capitão marvel">
     </div>
   </header>
 
+
   <main>
-    <div>
-      <img src="/image/captainmarveltitle.png" alt="Novidade capitão marvel">
-      <div>
-        <img src="./image/Produtos_Catalogo/goku.jpg" alt="Boneco goku">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-        <p>R$ 250,00</p>
-        <button>COMPRAR</button>
-      </div>
-
-      <div>
-        <img src="./image/Produtos_Catalogo/charizard.jpg" alt="boneco charizard">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-        <p>R$ 250,00</p>
-        <button>COMPRAR</button>
-      </div>
-
-      <div>
-        <img src="./image/Produtos_Catalogo/johnwick.jpg" alt="boneco johnwick">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-        <p>R$ 250,00</p>
-        <button>COMPRAR</button>
-      </div>
-
-      <div>
-        <img src="./image/Produtos_Catalogo/brave.jpg" alt="boneco brave">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-        <p id="preço">R$ 250,00</p>
-        <button>COMPRAR</button>
-      </div>
-
-      <div>
-        <img src="./image/Produtos_Catalogo/chucky.jpg" alt="boneco chucky">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-        <p>R$ 250,00</p>
-        <button>COMPRAR</button>        
-      </div>
-      
-      <div>
-        <img src="./image/Produtos_Catalogo/capitamarvel.jpg" alt="boneco capitão marvel">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-        <p>R$ 250,00</p>
-        <button>COMPRAR</button>        
+    <div class="container">
+      <h3>CATÁLOGO</h3>
+      <div class="row">
+        <div class="box">
+          <img class="products" src="./image/Produtos_Catalogo/goku.jpg" alt="Boneco goku">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>sit amet, consectetur adipiscing elit. </p>
+          <p><strong>R$ 250,00</strong></p>
+          <button><strong>COMPRAR</strong></button>
+        </div>
+  
+        <div class="box">
+          <img class="products" src="./image/Produtos_Catalogo/charizard.jpg" alt="boneco charizard">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>sit amet, consectetur adipiscing elit. </p>
+          <p><strong>R$ 250,00</strong></p>
+          <button><strong>COMPRAR</strong></button>
+        </div>
+  
+        <div class="box">
+          <img class="products" src="./image/Produtos_Catalogo/johnwick.jpg" alt="boneco johnwick">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>sit amet, consectetur adipiscing elit. </p>
+          <p><strong>R$ 250,00</strong></p>
+          <button><strong>COMPRAR</strong></button>
+        </div>
+  
+        <div class="box">
+          <img class="products" src="./image/Produtos_Catalogo/brave.jpg" alt="boneco brave">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>sit amet, consectetur adipiscing elit. </p>
+          <p><strong>R$ 250,00</strong></p>
+          <button><strong>COMPRAR</strong></button>
+        </div>
+  
+        <div class="box">
+          <img class="products" src="./image/Produtos_Catalogo/chucky.jpg" alt="boneco chucky">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>sit amet, consectetur adipiscing elit. </p>
+          <p><strong>R$ 250,00</strong></p>
+          <button><strong>COMPRAR</strong></button>       
+        </div>
+        
+        <div class="box">
+          <img class="products" src="./image/Produtos_Catalogo/capitamarvel.jpg" alt="boneco capitão marvel">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>sit amet, consectetur adipiscing elit. </p>
+          <p><strong>R$ 250,00</strong></p>
+          <button><strong>COMPRAR</strong></button>        
+        </div>
       </div>
     </div>
   </main>
