--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="backgorund">
-        <img id="logo" alt="logo principal do site, super hero" src="/image/logo.png" />
+        <img class="logo" alt="logo principal do site, super hero" src="/image/logo.png" />
         <nav>
           <div class="button">
             <ul>
