commit on 'master'

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       
       <section>
         <div class="about">
-          <h3 id="teste">QUEM SOMOS</h3>
+          <h3>QUEM SOMOS</h3>
           <p>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Quisque
             enim eros,<br> pretium maximus pellentesque non,<br> commodo quis risus. Ut
             eleifend elit arcu.<br> Suspendisse sagittis congue risus. Cras<br> varius
