commit on 'mster'

--- a/contato.html
+++ b/contato.html
@@ -34,15 +34,17 @@
             enim eros, pretium maximus<br> pellentesque non, commodo quis risus.</p>
 
           <form action="">
-            <div class="form">
               <div>
-                <input type="text" placeholder="NOME" /> <br /><br />
-                <input type="email" placeholder="EMAIL" /> <br /><br />
-                <input type="tel" placeholder="TELEFONE" /><br /><br />
-                <textarea cols="30" rows="10" placeholder="Como podemos ajudá-lo?"></textarea>
+                  <div>
+                    <input type="text" placeholder="NOME" />
+                    <input type="email" placeholder="EMAIL" />
+                    <input type="tel" placeholder="TELEFONE" />
+                  </div>
+                  <div>
+                    <textarea cols="30" rows="10" placeholder="Como podemos ajudá-lo?"></textarea>
+                  </div>               
               </div>
               <button><strong>ENVIAR</strong></button> 
-            </div>
           </form>
       </div>
     </main>
