Finalização do Projeto

--- a/catálogo.html
+++ b/catálogo.html
@@ -7,28 +7,28 @@
   <title>Catálogo</title>
   
    <!--Style-->
-   <link rel="stylesheet" href="/css/main.css">
+   <link rel="stylesheet" href="./css/main.css">
 
 </head>
 <body>
 </head>
 <body>
 
-  <header>
-    <div class="backgorund-catalog">
-      <img class="logo" alt="logo principal do site, super hero" src="/image/logo.png" />
-      <nav>
-        <div class="button">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="catálogo.html">Catálogo</a></li>
-            <li><a href="contato.html">Contato</a></li>
-          </ul>
-        </div>
-      </nav>
-      <img class="novidade" src="/image/captainmarveltitle.png" alt="Novidade capitão marvel">
-    </div>
-  </header>
+  <div class="backgorund-catalog">
+    <header>
+      <div class="menu">
+        <img class="logo" alt="logo principal da loja, super hero" src="./image/logo.png" />
+        <nav class="navbar">
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="catálogo.html">Catálogo</a></li>
+              <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+      </div>
+    </header>
+    <img class="captain-title" src="./image/captainmarveltitle.png" alt="">
+  </div>
 
 
   <main>
