--- a/contato.html
+++ b/contato.html
@@ -7,25 +7,25 @@
     <title>Contato</title>
 
     <!--Style-->
-   <link rel="stylesheet" href="/css/main.css">
+   <link rel="stylesheet" href="./css/main.css">
 
   </head>
   <body>
-    <header>
-      <div class="backgorund-contato">
-        <img class="logo" alt="logo principal do site, super hero" src="/image/logo.png" />
-        <nav>
-          <div class="button">
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="catálogo.html">Catálogo</a></li>
-              <li><a href="contato.html">Contato</a></li>
-            </ul>
-          </div>
-        </nav>
-        <img id="fale-conosco" src="image/contatotitle.png" alt=" Fale conosco estamo aqui" />
-      </div>
-    </header>
+    <div class="backgorund-contato">
+      <header>
+        <div class="menu">
+          <img class="logo" alt="logo principal da loja, super hero" src="./image/logo.png" />
+          <nav class="navbar">
+              <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="catálogo.html">Catálogo</a></li>
+                <li><a href="contato.html">Contato</a></li>
+              </ul>
+          </nav>
+        </div>
+      </header>
+      <img class="contact-title" src="./image/contatotitle.png" alt="">
+    </div>
 
     <main>
       <div class="contact">
